Add basic lists

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -75,6 +75,13 @@ em {
   font-style: italic;
 }
 
+ul {
+  margin-left: 2rem;
+  li {
+    list-style: disc;
+  }
+}
+
 @media print {
 
   @page-margin: 5cm;
