--- a/src/style/main.less
+++ b/src/style/main.less
@@ -1,13 +1,13 @@
 @import '_generic.reset.less';
 
-@margin: 1rem;
+@margin: 5rem;
 
 @black: #444;
 
 
 body {
 
-  max-width: 600px;
+  max-width: calc(600px + @margin * 2);
   margin: @margin;
   margin-bottom: 50vh;
 
