--- a/src/style/main.less
+++ b/src/style/main.less
@@ -32,12 +32,14 @@ aside {
   float: right;
 
   @media screen and (max-width: 600px) {
+
+    max-width: 300px;
+
     border: none;
     padding: 0;
     margin: 0;
-    float: none;
 
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.25rem;
 
     font-style: italic;
 
@@ -46,6 +48,10 @@ aside {
       margin-right: 0.5rem;
 
       font-style: normal;
+    }
+
+    & + * {
+      clear: both;
     }
   }
 }
