--- a/src/style/main.less
+++ b/src/style/main.less
@@ -4,6 +4,14 @@
 
 @black: #444;
 
+html, body {
+  font-size: 18px;
+  line-height: 1.4;
+
+  font-family: "PT Serif", serif;
+
+  color: @black;
+}
 
 body {
 
@@ -11,12 +19,6 @@ body {
   margin: @margin;
   margin-bottom: 50vh;
 
-  font-size: 18px;
-  line-height: 1.4;
-
-  font-family: "PT Serif", serif;
-
-  color: @black;
 }
 
 aside {
@@ -42,6 +44,7 @@ aside {
     margin-bottom: 0.25rem;
 
     font-style: italic;
+    font-size: 0.9rem;
 
     &::before {
       content: "\21A1";
