--- a/src/_includes/default.njk
+++ b/src/_includes/default.njk
@@ -8,7 +8,9 @@
     <title>{{title}}</title>
   </head>
   <body>
-    {{ content | safe }}
+    <main>
+      {{ content | safe }}
+    </main>
   </body>
 </html>
 
