--- a/src/style/main.less
+++ b/src/style/main.less
@@ -33,14 +33,16 @@ main {
 
 aside {
 
-  font-size: 0.9rem;
-
   max-width: 25%;
 
+  font-size: 0.9rem;
+
   border-left: 2px solid #888;
+
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
-  margin-left: 0.75rem;
+  margin-left: 0.5rem;
+
   padding-left: 0.5rem;
   padding-top: 0.25rem;
   padding-bottom: 0.5rem;
@@ -49,7 +51,7 @@ aside {
 
   @media screen and (max-width: 600px) {
 
-    width: unset;
+    max-width: unset;
 
     border: none;
     padding: 0;
