--- a/src/style/main.less
+++ b/src/style/main.less
@@ -106,6 +106,12 @@ ul {
   }
 }
 
+blockquote.to-read {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  font-style: italic;
+}
+
 @media print {
 
   @page-margin: 5cm;
@@ -131,3 +137,4 @@ ul {
     max-width: 3.5cm;
   }
 }
+
