--- a/src/style/main.less
+++ b/src/style/main.less
@@ -112,6 +112,14 @@ blockquote.to-read {
   font-style: italic;
 }
 
+.check {
+  background-color: #eeeeee;
+  border: 1px solid #dddddd;
+  border-radius: 0.3em;
+  padding-left: 0.1em;
+  padding-right: 0.1em;
+}
+
 @media print {
 
   @page-margin: 5cm;
