--- a/src/_includes/default.njk
+++ b/src/_includes/default.njk
@@ -8,6 +8,9 @@
     <title>{{title}}</title>
   </head>
   <body>
+    <header>
+      <h1>{{title}}</h1>
+    </header>
     <main>
       {{ content | safe }}
     </main>
