--- a/src/style/main.less
+++ b/src/style/main.less
@@ -59,9 +59,15 @@ aside {
     padding: 0;
     margin: 0;
 
-    margin-bottom: 0.25rem;
+    margin-bottom: 0.1rem;
 
     font-style: italic;
+
+    position: relative;
+    top: -1.2em;
+    font-size: 0.75rem;
+    margin-top: 0.5rem;
+    height: 0;
 
     &::before {
       content: "\21A1";
