Add small intro description

--- a/src/style/_generic.layout.less
+++ b/src/style/_generic.layout.less
@@ -5,6 +5,7 @@ body {
 main {
   max-width: var(--content-width);
   margin: auto;
+  margin-top: var(--content-margin);
   margin-bottom: 50vh;
 }
 
