Refactor CSS to BEM

--- a/src/_includes/default.njk
+++ b/src/_includes/default.njk
@@ -1,3 +1,6 @@
+---
+
+---
 <!doctype html>
 <html lang="en">
   <head>
@@ -8,8 +11,13 @@
     <title>{{title}}</title>
   </head>
   <body>
-    <header>
-      <h1>{{title}}</h1>
+    <header class="header">
+      {% if not home %}
+        <nav class="nav">
+          <a class="nav__item" href="/">Home</a>
+        </nav>
+      {% endif %}
+      <h1 class="header__title">{{title}}</h1>
     </header>
     <main>
       {{ content | safe }}
