--- a/src/style/main.less
+++ b/src/style/main.less
@@ -4,16 +4,18 @@
 @import '_generic.shared.less';
 @import '_generic.layout.less';
 
-@import '_elements.headers.less';
-@import '_elements.paragraph.less';
-@import '_elements.strong.less';
-@import '_elements.emphasis.less';
-@import '_elements.aside.less';
-@import '_elements.lists.less';
-@import '_elements.quotes.less';
-@import '_elements.pre.less';
+@import '_objects.header.less';
+@import '_objects.navigation.less';
 
-@import '_objects.heading.less';
-@import '_objects.to-read.less';
-@import '_objects.maps.less';
+@import '_objects.article-headings.less';
+@import '_objects.article-paragraph.less';
+@import '_objects.article-strong.less';
+@import '_objects.article-emphasis.less';
+@import '_objects.article-aside.less';
+@import '_objects.article-lists.less';
+@import '_objects.article-quotes.less';
+@import '_objects.article-pre.less';
+@import '_objects.article-blockquote.less';
+@import '_objects.article-images.less';
+
 
