--- a/src/style/main.less
+++ b/src/style/main.less
@@ -5,6 +5,7 @@
 @import '_generic.layout.less';
 
 @import '_objects.header.less';
+@import '_objects.top-drop.less';
 @import '_objects.navigation.less';
 
 @import '_objects.article-headings.less';
