--- a/src/style/_objects.navigation.less
+++ b/src/style/_objects.navigation.less
@@ -1,37 +1,46 @@
 .nav {
-  .nav__item {
-    display: block;
-
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-
-    padding: 1.2rem;
-
-    border: solid @palette-black 1px;
-    border-top: none;
-
-    font-family: "Spectral SC", serif;
-
-    font-weight: 700;
-    font-size: 1.2rem;
-
-    text-decoration: none;
-
-    &:link, &:visited {
-      color: @palette-black;
-    }
-
-    &:hover {
-      text-decoration: underline;
-    }
-
-    @media print {
-      display: none;
-    }
-
+  @media print {
+    display: none;
   }
 
+}
+
+.nav__link {
+
+  font-family: "Spectral SC", serif;
+
+  font-weight: 700;
+  font-size: 1.2rem;
+  padding-left: 1.2rem;
+  padding-right: 1.2rem;
+
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+
+  text-decoration: none;
+
+  &:link, &:visited {
+    color: @palette-black;
+  }
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+.nav__link--active {
+  font-weight: 400;
+  background-color: @palette-black;
+
+  &:link, &:visited {
+    color: @palette-white;
+  }
+
+}
+
+.nav__link--lesser {
+  font-size: 1rem;
 }
 
