--- a/src/_includes/default.njk
+++ b/src/_includes/default.njk
@@ -18,7 +18,7 @@
           </ul>
         </nav>
       {% endif %}
-      <h1 class="header__title">{{title}}</h1>
+      <h1 class="header__title">{% block title %}{{title}}{% endblock %}</h1>
     </header>
     <main>
       {% block main %}
