Add shadow to imitate stroke

--- a/src/style/_objects.header.less
+++ b/src/style/_objects.header.less
@@ -10,9 +10,17 @@
 }
 
 .header__title {
+
   font-size: 8rem;
   position: sticky;
   bottom: var(--content-margin);
+
+  @stroke-size: 2px;
+
+  text-shadow: -@stroke-size -@stroke-size 0 @palette-white,
+                @stroke-size -@stroke-size 0 @palette-white,
+               -@stroke-size  @stroke-size 0 @palette-white,
+                @stroke-size  @stroke-size 0 @palette-white;
 }
 
 .header__title::after {
