Move fonts to settings

--- a/src/style/_generic.shared.less
+++ b/src/style/_generic.shared.less
@@ -14,7 +14,7 @@ html, body {
   font-size: 18px;
   line-height: 1.4;
 
-  font-family: "PT Serif", serif;
+  font-family: @body-font;
 
   color: @palette-black;
 }
