--- a/src/style/main.less
+++ b/src/style/main.less
@@ -1,4 +1,5 @@
 @import '_settings.colors.less';
+@import '_settings.fonts.less';
 
 @import '_generic.reset.less';
 @import '_generic.shared.less';
