Add card layout

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -9,6 +9,8 @@
 @import '_objects.top-drop.less';
 @import '_objects.navigation.less';
 
+@import '_objects.card.less';
+
 @import '_objects.article-headings.less';
 @import '_objects.article-paragraph.less';
 @import '_objects.article-strong.less';
