--- a/src/style/_generic.shared.less
+++ b/src/style/_generic.shared.less
@@ -1,6 +1,9 @@
+@content-width: 600px;
+@content-margin: 5rem;
+
 :root {
-  --content-margin: 5rem;
-  --content-width: 600px;
+  --content-margin: @content-margin;
+  --content-width: @content-width;
 
   --content-spacing: 0.7rem;
   --section-spacing: 1.5rem;
