--- a/src/_includes/default.njk
+++ b/src/_includes/default.njk
@@ -20,7 +20,7 @@
       {% endif %}
       <h1 class="header__title">{% block title %}{{title}}{% endblock %}</h1>
     </header>
-    <main>
+    <main class="content">
       {% block main %}
 
       {% endblock %}
