--- a/src/style/_objects.header.less
+++ b/src/style/_objects.header.less
@@ -2,11 +2,21 @@
 @header-max-font-size: 8rem;
 
 .header {
-  display: flex;
-  height: calc(100vh - 2 * var(--content-margin));
-  align-items: flex-end;
+  margin: @content-margin;
   line-height: 1;
-  margin-bottom: var(--content-spacing);
+}
+
+@supports(height: calc(100vh - 2 * var(--content-margin))) {
+  .header {
+    margin: initial;
+
+    display: flex;
+    align-items: flex-end;
+
+    height: calc(100vh - 2 * var(--content-margin));
+    margin-bottom: var(--content-spacing);
+  }
+
 }
 
 .header__title {
