--- a/src/_includes/adventure.njk
+++ b/src/_includes/adventure.njk
@@ -5,12 +5,14 @@
 
 {% block nav %}
   {% if collections[id].length > 1 %}
-    {% set adventures = collections[id] %}
-    {%- for i in adventures -%}
-      <li class="top-drop__item">
-        <a class="nav__link nav__link--lesser {{ "nav__link--active" if i.url == page.url }}" href="{{ i.url }}">{{ i.data.type }}</a>
-      </li>
-    {%- endfor -%}
+    <ul class="top-drop__group">
+      {% set adventures = collections[id] %}
+      {%- for i in adventures -%}
+        <li class="top-drop__item">
+          <a class="nav__link nav__link--lesser {{ "nav__link--active" if i.url == page.url }}" href="{{ i.url }}">{{ i.data.type }}</a>
+        </li>
+      {%- endfor -%}
+    </ul>
   {% endif %}
 {% endblock %}
 
