Add Pfeffer's Mediaeval font

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -1,6 +1,7 @@
 @import '_settings.colors.less';
 @import '_settings.fonts.less';
 
+@import '_generic.font-faces.less';
 @import '_generic.reset.less';
 @import '_generic.shared.less';
 @import '_generic.layout.less';
