--- a/src/style/_objects.article-blockquote.less
+++ b/src/style/_objects.article-blockquote.less
@@ -2,6 +2,11 @@
 
   blockquote {
 
+    &.letter {
+      font-family: 'Pfeffer Mediaeval', cursive;
+      font-feature-settings: "hist", "ss02";
+    }
+
     border-left: 1px solid;
     border-right: 1px solid;
     border-color: @palette-dark-grey;
