Add kerning to mediaval font

--- a/src/style/_objects.article-blockquote.less
+++ b/src/style/_objects.article-blockquote.less
@@ -5,6 +5,7 @@
     &.letter {
       font-family: 'Pfeffer Mediaeval', cursive;
       font-feature-settings: "hist", "ss02";
+      font-kerning: normal;
     }
 
     border-left: 1px solid;
