--- a/src/style/_generic.font-faces.less
+++ b/src/style/_generic.font-faces.less
@@ -1,5 +1,6 @@
 @font-face {
   font-family: "Pfeffer Mediaeval";
   src: url("/fonts/PfefferMediaeval.otf") format("opentype");
+  font-kerning: normal;
   font-feature-settings: "hist";
 }
