--- a/src/style/main.less
+++ b/src/style/main.less
@@ -10,6 +10,8 @@
 @import '_objects.top-drop.less';
 @import '_objects.navigation.less';
 
+@import '_objects.home-navigation.less';
+
 @import '_objects.card.less';
 
 @import '_objects.article-headings.less';
