Add direct links to each heading

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -15,6 +15,7 @@
 @import '_objects.card.less';
 
 @import '_objects.article-headings.less';
+@import '_objects.article-headings-direct-link.less';
 @import '_objects.article-paragraph.less';
 @import '_objects.article-strong.less';
 @import '_objects.article-emphasis.less';
@@ -26,3 +27,4 @@
 @import '_objects.article-images.less';
 
 @import '_objects.license.less';
+
