--- a/src/style/_generic.shared.less
+++ b/src/style/_generic.shared.less
@@ -1,5 +1,5 @@
 @content-width: 600px;
-@content-margin: 5rem;
+@content-margin: 8vw;
 
 :root {
   --content-margin: @content-margin;
@@ -7,10 +7,6 @@
 
   --content-spacing: 0.7rem;
   --section-spacing: 1.5rem;
-
-  @media screen and (max-width: 600px) {
-    --content-margin: 8vmin;
-  }
 }
 
 html, body {
