--- a/src/style/_objects.article-headings-direct-link.less
+++ b/src/style/_objects.article-headings-direct-link.less
@@ -4,7 +4,10 @@
 
   font-size: 0.8em;
   font-weight: 400;
-  vertical-align: center;
+
+  float: right;
+  padding-top: 0.22em;
+  padding-left: 0.5em;
 }
 
 :hover > .direct-link { 
