Fix header at all widths

--- a/src/style/_objects.header.less
+++ b/src/style/_objects.header.less
@@ -27,7 +27,7 @@
   position: sticky;
   bottom: var(--content-margin);
 
-  @stroke-size: 2px;
+  @stroke-size: 0.015em;
 
   text-shadow: -@stroke-size -@stroke-size 0 @palette-white,
                 @stroke-size -@stroke-size 0 @palette-white,
