Add style for article small content

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -20,6 +20,7 @@
 @import '_objects.article-links.less';
 @import '_objects.article-strong.less';
 @import '_objects.article-emphasis.less';
+@import '_objects.article-small.less';
 @import '_objects.article-aside.less';
 @import '_objects.article-lists.less';
 @import '_objects.article-quotes.less';
