--- a/src/style/_objects.article-headings-direct-link.less
+++ b/src/style/_objects.article-headings-direct-link.less
@@ -1,25 +1,28 @@
-.direct-link {
-  color: #ffffff;
-  text-decoration: none;
+.article {
+  .direct-link:link, .direct-link:visited {
+    color: #ffffff;
+    text-decoration: none;
 
-  font-size: 0.8em;
-  font-weight: 400;
+    font-size: 0.8em;
+    font-weight: 400;
 
-  float: right;
-  padding-top: 0.22em;
-  padding-left: 0.5em;
-}
-
-:hover > .direct-link { 
-  color: @palette-dark-grey;
-}
-
-.direct-link:hover {
-  color: @palette-black;
-}
-
-@media print {
-  .direct-link {
-    display: none;
+    float: right;
+    padding-top: 0.22em;
+    padding-left: 0.5em;
   }
+
+  :hover > .direct-link { 
+    color: @palette-dark-grey;
+  }
+
+  .direct-link:hover {
+    color: @palette-black;
+  }
+
+  @media print {
+    .direct-link {
+      display: none;
+    }
+  }
+
 }
