Move desktop header to center

--- a/src/style/_objects.header.less
+++ b/src/style/_objects.header.less
@@ -11,7 +11,7 @@
     margin: initial;
 
     display: flex;
-    align-items: flex-end;
+    align-items: center;
 
     height: calc(100vh - 2 * var(--content-margin));
   }
