Change header to be centered

--- a/src/style/_objects.header.less
+++ b/src/style/_objects.header.less
@@ -26,7 +26,7 @@
   font-size: @header-font-size;
   position: sticky;
 
-  border-block-end: 0.07em solid @palette-black;
+  text-align: center;
 }
 
 @media print {
@@ -42,8 +42,7 @@
     text-orientation: mixed;
     transform: rotate(180deg);
     display: flex;
-    align-items: flex-end;
-    align-self: normal;
+    align-items: center;
   }
 
 }
