--- a/src/style/main.less
+++ b/src/style/main.less
@@ -21,6 +21,7 @@
 @import '_objects.article-strong.less';
 @import '_objects.article-emphasis.less';
 @import '_objects.article-small.less';
+@import '_objects.article-small-links.less';
 @import '_objects.article-aside.less';
 @import '_objects.article-lists.less';
 @import '_objects.article-quotes.less';
