Improve page breaks for print

--- a/src/style/_generic.layout.less
+++ b/src/style/_generic.layout.less
@@ -38,4 +38,13 @@ body {
   body {
     margin: 0;
   }
+
+  h2 {
+    page-break-before: always;
+  }
+
+  h3, h4, h5 {
+    page-break-after: avoid;
+  }
+
 }
