--- a/src/style/_objects.article-blockquote.less
+++ b/src/style/_objects.article-blockquote.less
@@ -19,11 +19,13 @@
     padding-left: 1rem;
     padding-right: 1rem;
 
-    margin-bottom: 1rem;
+    margin-top: var(--content-spacing);
 
-    *:last-child {
-      margin-bottom: 0;
+    :first-child {
+      margin-top: 0;
+
     }
+
   }
 
 }
