--- a/src/style/_objects.article-lists.less
+++ b/src/style/_objects.article-lists.less
@@ -2,7 +2,7 @@
   ul, ol {
     margin-left: 2rem;
 
-    margin-bottom: var(--content-spacing);
+    margin-top: var(--content-spacing);
   }
 
   ul {
