--- a/src/style/main.less
+++ b/src/style/main.less
@@ -10,7 +10,7 @@
 @import '_objects.top-drop.less';
 @import '_objects.navigation.less';
 
-@import '_objects.home-navigation.less';
+@import '_objects.collection-navigation.less';
 
 @import '_objects.card.less';
 
