--- a/src/_includes/default.njk
+++ b/src/_includes/default.njk
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/style/main.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700|Spectral+SC:400,400i,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/vmh6sew.css">
     <title>{{title}}</title>
   </head>
   <body>
