--- a/src/style/_objects.header.less
+++ b/src/style/_objects.header.less
@@ -24,6 +24,10 @@
 
   font-family: @heading-font;
   font-size: @header-font-size;
+
+  font-style: italic;
+  font-feature-settings: "swsh" 2;
+
   position: sticky;
 
   text-align: center;
