--- a/src/style/_settings.fonts.less
+++ b/src/style/_settings.fonts.less
@@ -1,4 +1,4 @@
-@heading-font: "Spectral SC", serif;
-@body-font: "PT Serif", serif;
+@heading-font: adobe-garamond-pro, serif;
+@body-font: adobe-garamond-pro, serif;
 @code-font: monospace;
 
