--- a/src/style/_generic.shared.less
+++ b/src/style/_generic.shared.less
@@ -10,12 +10,16 @@
 }
 
 html, body {
-  font-size: 18px;
-  line-height: 1.4;
+  font-size: 22px;
+  line-height: 1.3;
 
   font-family: @body-font;
+  font-kerning: normal;
+  font-variant-numeric: oldstyle-nums;
 
   color: @palette-black;
+
+  font-variant-ligatures: discretionary-ligatures;
 }
 
 @media print {
