--- a/src/style/_objects.article-headings.less
+++ b/src/style/_objects.article-headings.less
@@ -38,11 +38,12 @@ body {
 
   h2, h3, h4 {
     font-family: @heading-font;
+    font-variant-caps: small-caps;
+    font-weight: 600;
   }
 
   h2 {
-    font-size: 1.9rem;
-    font-weight: 700;
+    font-size: 1.4rem;
 
     margin-top: var(--content-margin);
 
@@ -50,15 +51,13 @@ body {
   }
 
   h3 {
-    font-size: 1.3rem;
-    font-weight: 700;
+    font-size: 1.2rem;
     margin-top: calc(var(--content-spacing) * 4);
 
   }
 
   h4 {
     font-size: 1rem;
-    font-weight: 700;
 
     padding-top: 0.5rem;
 
