Add invisible text

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -27,6 +27,7 @@
 @import '_objects.article-pre.less';
 @import '_objects.article-blockquote.less';
 @import '_objects.article-images.less';
+@import '_objects.article-invisible.less';
 
 @import '_objects.license.less';
 
