Use rem instead of px for sizing

--- a/src/style/_objects.license.less
+++ b/src/style/_objects.license.less
@@ -3,7 +3,7 @@
   font-size: 0.8rem;
   text-align: right;
 
-  max-width: 350px;
+  max-width: 12rem;
 
   right: var(--content-margin);
   padding-bottom: var(--content-margin);
