--- a/src/style/_objects.article-pre.less
+++ b/src/style/_objects.article-pre.less
@@ -1,8 +1,8 @@
 .article {
   pre {
     font-family: @code-font;
-    font-size: 10px;
-    letter-spacing: 4px;
+    font-size: 0.5rem;
+    letter-spacing: 0.18rem;
   }
 }
 
