--- a/src/style/_objects.article-headings.less
+++ b/src/style/_objects.article-headings.less
@@ -45,7 +45,7 @@ body {
   h2 {
     font-size: 1.4rem;
 
-    margin-top: var(--content-margin);
+    margin-top: var(--content-spacing-l);
 
     border-bottom: 1px solid @palette-dark-grey;
   }
