--- a/src/style/_objects.license.less
+++ b/src/style/_objects.license.less
@@ -5,8 +5,8 @@
 
   max-width: 12rem;
 
-  right: var(--content-margin);
-  padding-bottom: var(--content-margin);
+  right: var(--content-min-margin);
+  padding-bottom: var(--content-min-margin);
 }
 
 .license__work-title {
