--- a/src/style/main.less
+++ b/src/style/main.less
@@ -1,5 +1,6 @@
 @import '_settings.colors.less';
 @import '_settings.fonts.less';
+@import '_settings.sizes.less';
 
 @import '_generic.font-faces.less';
 @import '_generic.reset.less';
