--- a/src/style/_generic.shared.less
+++ b/src/style/_generic.shared.less
@@ -1,17 +1,22 @@
-@content-width: 27rem;
-@content-margin: 8vw;
-
 :root {
-  --content-margin: @content-margin;
-  --content-width: @content-width;
+  --content-min-margin: @content-min-margin;
+  --content-max-width: @content-max-width;
 
+  --content-spacing-l: 2rem;
   --content-spacing: 0.7rem;
   --section-spacing: 1.5rem;
 }
 
+html {
+  font-size: calc(80% + 1.25vmin);
+}
+
+body {
+  font-size: 100%;
+}
+
 html, body {
-  font-size: 22px;
-  line-height: 1.3;
+  line-height: 1.25;
 
   font-family: @body-font;
   font-kerning: normal;
