Remove hyphens from headers

--- a/src/style/_objects.article-headings.less
+++ b/src/style/_objects.article-headings.less
@@ -5,7 +5,9 @@ body {
   h2, h3, h4, h5, h6 {
     display: flex;
 
-    line-height: 1.2;
+    line-height: 1.1;
+
+    hyphens: none;
 
     &::before {
       white-space: pre;
