Add improved print styling

--- a/src/style/_generic.shared.less
+++ b/src/style/_generic.shared.less
@@ -28,8 +28,13 @@ html, body {
 }
 
 @media print {
-  html, body {
-    color: #000000 !important;
+  * {
+    color: @print-black !important;
+    background-color: @print-white !important;
+
+    text-shadow: none !important;
+    box-shadow: none !important;
+    border-color: @print-black;
   }
 }
 
