--- a/src/style/_objects.header.less
+++ b/src/style/_objects.header.less
@@ -27,6 +27,8 @@
   position: sticky;
 
   text-align: center;
+
+  text-shadow: 0.1rem 0.1rem @palette-primary-light;
 }
 
 @media print {
@@ -45,6 +47,7 @@
     align-items: center;
 
     padding-inline-end: 4.5rem;
+    text-shadow: -0.1rem 0.1rem @palette-primary-light;
   }
 
 }
