--- a/src/style/_objects.card.less
+++ b/src/style/_objects.card.less
@@ -13,6 +13,10 @@
 
 .card--link {
 
+  &:link, &:visited {
+    color: @palette-white;
+  }
+
   display: block;
 
   text-decoration: none;
@@ -31,9 +35,16 @@
 }
 
 .card__title {
+
+  &::before {
+    content: '';
+  }
+
+  margin-top: 0;
+
   font-family: @heading-font;
 
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: bold;
 }
 
