--- a/src/style/_objects.collection-navigation.less
+++ b/src/style/_objects.collection-navigation.less
@@ -8,3 +8,15 @@
   font-size: 1.2rem;
 }
 
+.collection-nav__list {
+  margin: 0;
+}
+
+.collection-nav__list-item {
+  margin: 0;
+}
+
+.collection-nav__list-item::before {
+  content: none;
+}
+
