--- a/src/style/main.less
+++ b/src/style/main.less
@@ -7,6 +7,21 @@
 @import '_generic.shared.less';
 @import '_generic.layout.less';
 
+@import '_elements.headings.less';
+@import '_elements.headings-direct-link.less';
+@import '_elements.paragraph.less';
+@import '_elements.links.less';
+@import '_elements.strong.less';
+@import '_elements.emphasis.less';
+@import '_elements.small.less';
+@import '_elements.small-links.less';
+@import '_elements.lists.less';
+@import '_elements.quotes.less';
+@import '_elements.pre.less';
+@import '_elements.blockquote.less';
+@import '_elements.images.less';
+@import '_elements.invisible.less';
+
 @import '_objects.header.less';
 @import '_objects.top-drop.less';
 @import '_objects.navigation.less';
@@ -14,21 +29,6 @@
 @import '_objects.collection-navigation.less';
 
 @import '_objects.card.less';
-
-@import '_objects.article-headings.less';
-@import '_objects.article-headings-direct-link.less';
-@import '_objects.article-paragraph.less';
-@import '_objects.article-links.less';
-@import '_objects.article-strong.less';
-@import '_objects.article-emphasis.less';
-@import '_objects.article-small.less';
-@import '_objects.article-small-links.less';
-@import '_objects.article-lists.less';
-@import '_objects.article-quotes.less';
-@import '_objects.article-pre.less';
-@import '_objects.article-blockquote.less';
-@import '_objects.article-images.less';
-@import '_objects.article-invisible.less';
 
 @import '_objects.license.less';
 
