--- a/src/style/_objects.header.less
+++ b/src/style/_objects.header.less
@@ -28,7 +28,7 @@
 
   text-align: center;
 
-  text-shadow: 0.1rem 0.1rem @palette-primary-light;
+  text-shadow: 0.02em 0.02em @palette-primary-light;
 }
 
 @media print {
@@ -47,7 +47,7 @@
     align-items: center;
 
     padding-inline-end: 4.5rem;
-    text-shadow: -0.1rem 0.1rem @palette-primary-light;
+    text-shadow: -0.02em 0.02em @palette-primary-light;
   }
 
 }
