Make header look more vertically aligned

--- a/src/style/_objects.header.less
+++ b/src/style/_objects.header.less
@@ -18,8 +18,10 @@
 
   font-family: @heading-font;
   font-size: @header-font-size;
+  line-height: 1;
 
   padding: 2rem;
+  padding-bottom: 3rem;
 
   font-style: italic;
   font-feature-settings: "swsh" 2;
