Rebrand to Carpe DM

--- a/src/index.njk
+++ b/src/index.njk
@@ -1,6 +1,7 @@
 ---
   layout: home
-  title: When I'm a Dungeon Master
+  title: Carpe DM
+  subtitle: Sieze the Dungeon Master
 ---
 
 <article class="article">
@@ -27,4 +28,3 @@
     </ul>
   </nav>
 </article>
-
