--- a/src/style/_generic.layout.less
+++ b/src/style/_generic.layout.less
@@ -1,6 +1,8 @@
 .content-wrapper {
   margin-left: var(--content-min-margin);
   margin-right: var(--content-min-margin);
+
+  padding-top: var(--content-spacing-xl);
 }
 
 .article {
