--- a/src/style/_generic.shared.less
+++ b/src/style/_generic.shared.less
@@ -3,6 +3,7 @@
   --content-max-width: @content-max-width;
 
   --content-spacing-l: 2rem;
+  --content-spacing-xl: 5rem;
   --content-spacing: 0.7rem;
   --section-spacing: 1.5rem;
 }
@@ -37,4 +38,3 @@ html, body {
     border-color: @print-black;
   }
 }
-
