--- a/src/style/_objects.navigation.less
+++ b/src/style/_objects.navigation.less
@@ -23,6 +23,10 @@
 
   &:link, &:visited {
     color: @palette-black;
+
+    background-color: #ec8686;
+    border-color: #fff;
+    border-width: 0.2em;
   }
 
   &:hover {
@@ -42,4 +46,3 @@
 .nav__link--lesser {
   font-size: 1rem;
 }
-
