--- a/src/style/_generic.layout.less
+++ b/src/style/_generic.layout.less
@@ -2,7 +2,7 @@
   margin-left: var(--content-min-margin);
   margin-right: var(--content-min-margin);
 
-  padding-top: var(--content-spacing-xl);
+  padding-top: var(--content-spacing-l);
 }
 
 .article {
