--- a/src/style/_objects.header.less
+++ b/src/style/_objects.header.less
@@ -1,7 +1,5 @@
-@header-font-size: 20vmin;
-@header-padding: 2rem;
-
-@header-max-font-size: 8rem;
+@header-font-size: 17vmin;
+@header-padding: 8vmin;
 
 .header {
   margin: initial;
@@ -79,7 +77,6 @@
   font-family: @heading-font;
   font-size: 1.6rem;
   font-style: italic;
-  font-feature-settings: 'swsh';
 
   line-height: 1;
 
@@ -99,22 +96,13 @@
 }
 
 @media screen and (orientation: portrait) {
+  .header__hand-decor {
+    bottom: 40%;
 
-  .header__titling {
-    writing-mode: vertical-rl;
-    text-orientation: mixed;
-    transform: rotate(180deg);
+    width: 40vmax;
+    height: auto;
 
-    justify-content: flex-end;
-
-    align-items: flex-start;
-
-    text-shadow: -0.02em 0.02em @palette-primary-light;
-
+    fill: #ec8686;
+    transform: translate(-20%, 5vh) rotate(42deg);
   }
-
-  .header__title {
-    text-align: start;
-  }
-
 }
