--- a/src/style/_objects.header.less
+++ b/src/style/_objects.header.less
@@ -16,11 +16,19 @@
   background-color: @palette-black;
 }
 
+.header__decor-wrapper {
+  width: 100%;
+  overflow: hidden;
+}
+
 .header__wave-decor {
   fill: @palette-primary-light;
 
-  width: 100%;
+  width: 50em;
+  min-width: 100%;
   height: 30vh;
+
+  overflow: hidden;
 }
 
 .header__wave-decor--after {
