Improve nav colours

--- a/src/style/_objects.navigation.less
+++ b/src/style/_objects.navigation.less
@@ -24,8 +24,8 @@
   &:link, &:visited {
     color: @palette-black;
 
-    background-color: #ec8686;
-    border-color: #fff;
+    background-color: @palette-black;
+    border-color: @palette-white;
     border-width: 0.2em;
   }
 
