Fix nav text colour

--- a/src/style/_objects.navigation.less
+++ b/src/style/_objects.navigation.less
@@ -22,7 +22,7 @@
   text-decoration: none;
 
   &:link, &:visited {
-    color: @palette-black;
+    color: @palette-white;
 
     background-color: @palette-black;
     border-color: @palette-white;
