--- a/src/style/_objects.header.less
+++ b/src/style/_objects.header.less
@@ -26,7 +26,7 @@
 
   width: 50em;
   min-width: 100%;
-  height: 30vh;
+  height: 30vmin;
 
   overflow: hidden;
 }
@@ -34,7 +34,7 @@
 .header__wave-decor--after {
   fill: @palette-black;
 
-  height: 15vh;
+  height: 15vmin;
 }
 
 .header__hand-decor {
