Add dynamic font sizing

--- a/src/style/_generic.shared.less
+++ b/src/style/_generic.shared.less
@@ -7,8 +7,8 @@
   --section-spacing: 1.5rem;
 }
 
-html {
-  font-size: calc(80% + 1.25vmin);
+:root {
+  font-size: ~"max(100%, 80% + 2vmin)";
 }
 
 body {
